--- a/IDE/v.02/common/src/net/vdombox/ide/common/view/skins/button/MainMinimizeBtnSkin.mxml
+++ b/IDE/v.02/common/src/net/vdombox/ide/common/view/skins/button/MainMinimizeBtnSkin.mxml
@@ -2,11 +2,16 @@
 <s:SparkSkin xmlns:fx="http://ns.adobe.com/mxml/2009"
 			 xmlns:s="library://ns.adobe.com/flex/spark"
 			 minWidth="10" minHeight="10"
-			 height="12" width="12">
+			 height="12" width="12" xmlns:mx="library://ns.adobe.com/flex/mx">
 	
 	<fx:Metadata>
 		[HostComponent("spark.components.Button")] 
 	</fx:Metadata>
+	<fx:Script>
+		<![CDATA[
+			import net.vdombox.ide.common.view.components.VDOMImage;
+		]]>
+	</fx:Script>
 	
 	<fx:Declarations>
 		<s:SolidColorStroke id="stroke1"
@@ -25,12 +30,7 @@
 		<s:State name="disabled"/>
 	</s:states>
 	
-	<s:Rect id="fill"
-			height="10" width="10">
-		<s:fill>
-			<s:SolidColor color="0x000000" alpha="1"/>
-		</s:fill>
-	</s:Rect>
+	<mx:Image width="100%" height="100%" source="{ VDOMImage.Clear }"/>
 	
 	<s:Line xFrom="0.5" yFrom="9" xTo="9.5" yTo="9" stroke="{stroke1}" stroke.over="{stroke2}"/>
 	
