git-svn-id: http://svn.vdombox.ru/flextools/trunk@8607 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/VdomObjectEditor.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/VdomObjectEditor.mxml
@@ -156,7 +156,7 @@
 
 			private function addHandlers() : void
 			{
-				addEventListener( Event.REMOVED, removedFromStageHandler, false, 0, true );
+				addEventListener( Event.REMOVED_FROM_STAGE, removedFromStageHandler, false, 0, true );
 
 				addEventListener( RendererEvent.MOVE, renderer_moveHandler, true, 0, true );
 				addEventListener( RendererEvent.HTML_ADDED, renderer_htmlAddedHandler, true, 0, true );
@@ -164,7 +164,7 @@
 				addEventListener( TransformMarkerEvent.TRANSFORM_BEGIN, transformMarker_tansformBeginHandler, true, 0, true );
 				addEventListener( TransformMarkerEvent.TRANSFORM_COMPLETE, transformMarker_tansformCompleteHandler, true, 0, true );
 				
-				addEventListener( RendererEvent.EDITED, setTransformMarketHandler, true, 0, true );
+				addEventListener( RendererEvent.EDITED, setTransformMarketHandler, true );
 			}
 			
 
