git-svn-id: http://svn.vdombox.ru/flextools/trunk@8613 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/components/ActionElement.mxml
+++ b/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/components/ActionElement.mxml
@@ -58,6 +58,7 @@
 						parameterRenderer = parameterRendererFactory.newInstance();
 
 						parameterRenderer.data = parameter;
+						parameterRenderer.toolTip = parameter.help;
 
 						parametersContainer.addElement( parameterRenderer );
 					}
