--- a/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/components/EventElement.mxml
+++ b/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/components/EventElement.mxml
@@ -54,6 +54,7 @@
 						parameterRenderer = parameterRendererFactory.newInstance();
 					
 						parameterRenderer.title = parameter.name;
+						parameterRenderer.toolTip = parameter.help;
 					
 						parametersContainer.addElement( parameterRenderer );
 					}
