git-svn-id: http://svn.vdombox.ru/flextools/trunk@8615 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/core/src/net/vdombox/ide/core/view/components/ApplicationListItemRenderer.mxml
+++ b/IDE/v.02/core/src/net/vdombox/ide/core/view/components/ApplicationListItemRenderer.mxml
@@ -197,7 +197,7 @@
 		
 		<s:VGroup width="55%" height="100%" gap="0">
 			
-			<s:Label id="nameLabel"  width="120"
+			<s:Label id="nameLabel"  width="100%"
 					 fontSize="15" color="#fffafc"/>
 			
 			<mx:Spacer height="100%" />
