--- a/IDE/v.02/core/src/net/vdombox/ide/core/view/components/ApplicationListItemRenderer.mxml
+++ b/IDE/v.02/core/src/net/vdombox/ide/core/view/components/ApplicationListItemRenderer.mxml
@@ -197,7 +197,7 @@
 		
 		<s:VGroup width="55%" height="100%" gap="0">
 			
-			<s:Label id="nameLabel"  width="100%"
+			<s:Label id="nameLabel"  width="260"
 					 fontSize="15" color="#fffafc"/>
 			
 			<mx:Spacer height="100%" />
