git-svn-id: http://svn.vdombox.ru/flextools/trunk@8619 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/common/src/net/vdombox/editors/AutoCompleteItemRenderer.mxml
+++ b/IDE/v.02/common/src/net/vdombox/editors/AutoCompleteItemRenderer.mxml
@@ -7,6 +7,7 @@
 	<fx:Script>
 		<![CDATA[
 			import net.vdombox.editors.parsers.AutoCompleteItemVO;
+			import net.vdombox.ide.common.events.ItemRendererEvent;
 			
 			private var _data : AutoCompleteItemVO;
 			
@@ -22,6 +23,17 @@
 					icon.source = _data.icon;
 				else
 					icon.source = null;
+				
+				toolTip = _data.transcription;
+			}
+			
+			override protected function stateChanged( oldState : String, newState : String, recursive : Boolean ) : void
+			{
+				if ( newState == "selected" )
+				{
+					dispatchEvent( new ItemRendererEvent( ItemRendererEvent.SELECTED ) );
+				}
+				
 			}
 		]]>
 	</fx:Script>
