--- a/IDE/v.02/common/src/net/vdombox/editors/VDOMToolTip.mxml
+++ b/IDE/v.02/common/src/net/vdombox/editors/VDOMToolTip.mxml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <s:Group xmlns:fx="http://ns.adobe.com/mxml/2009" 
-		 xmlns:s="library://ns.adobe.com/flex/spark" 
-		 xmlns:mx="library://ns.adobe.com/flex/mx" width="400" height="300">
+			xmlns:s="library://ns.adobe.com/flex/spark" 
+			xmlns:mx="library://ns.adobe.com/flex/mx">
+	
 	<fx:Script>
 		<![CDATA[
 			import mx.managers.PopUpManager;
-			
 			private var _showed : Boolean = false;
 			
 			public function get showed():Boolean
@@ -13,19 +13,15 @@
 				return _showed;
 			}
 			
-			public function setData( transcription : String, description : String ) : void
+			public function set title( title : String ) : void
 			{				
-				this.transcription.text = transcription;
-				this.description.htmlText = description;
+				lblTitle.htmlText = title;
 			}
 			
 			public function show( owner : DisplayObjectContainer, x : int, y : int ) : void
 			{
 				if ( showed )
 					dispose();
-				
-				if ( transcription.text == "" && description.text == "" )
-					return;
 				
 				this.x = x;
 				this.y = y;
@@ -38,29 +34,18 @@
 				_showed = false;
 				PopUpManager.removePopUp( this );
 			}
-			
-			
 		]]>
 	</fx:Script>
+	
 	<fx:Declarations>
 		<!-- Place non-visual elements (e.g., services, value objects) here -->
-	</fx:Declarations>
+	</fx:Declarations> 
 	
 	<s:Rect width="100%" height="100%">
 		<s:fill>
-			<s:SolidColor color="#ffffe1"/>
+			<s:SolidColor color="#FFFFe1"/>
 		</s:fill>
 	</s:Rect>
 	
-	<s:VGroup width="100%" height="100%">
-		
-		<s:Label id="transcription" width="100%" />
-		
-		<mx:TextArea id="description"
-					width="100%" height="100%"
-					borderVisible="false" contentBackgroundAlpha="0"
-					editable="false" />
-		
-	</s:VGroup>
-	
+	<mx:Label id="lblTitle"/>
 </s:Group>
