--- a/IDE/v.02/common/src/net/vdombox/editors/PopUpHelpAutocomplete.mxml
+++ b/IDE/v.02/common/src/net/vdombox/editors/PopUpHelpAutocomplete.mxml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <s:Group xmlns:fx="http://ns.adobe.com/mxml/2009" 
 		 xmlns:s="library://ns.adobe.com/flex/spark" 
-		 xmlns:mx="library://ns.adobe.com/flex/mx" width="400" height="300">
+		 xmlns:mx="library://ns.adobe.com/flex/mx" width="400" height="300"
+		 click="group1_clickHandler(event)">
 	<fx:Script>
 		<![CDATA[
 			import mx.managers.PopUpManager;
@@ -24,7 +25,7 @@
 				if ( showed )
 					dispose();
 				
-				if ( transcription.text == "" && description.text == "" )
+				if ( transcription.text == "" && !description.text )
 					return;
 				
 				this.x = x;
@@ -40,6 +41,12 @@
 			}
 			
 			
+			protected function group1_clickHandler(event:MouseEvent):void
+			{
+				// TODO Auto-generated method stub
+				event.stopImmediatePropagation();
+			}
+			
 		]]>
 	</fx:Script>
 	<fx:Declarations>
@@ -52,7 +59,7 @@
 		</s:fill>
 	</s:Rect>
 	
-	<s:VGroup width="100%" height="100%">
+	<s:VGroup width="100%" height="100%" paddingLeft="5" paddingTop="5" paddingRight="5" paddingBottom="5">
 		
 		<s:Label id="transcription" width="100%" />
 		
