--- a/IDE/v.02/common/src/net/vdombox/editors/VDOMToolTip.mxml
+++ b/IDE/v.02/common/src/net/vdombox/editors/VDOMToolTip.mxml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <s:Group xmlns:fx="http://ns.adobe.com/mxml/2009" 
 			xmlns:s="library://ns.adobe.com/flex/spark" 
-			xmlns:mx="library://ns.adobe.com/flex/mx">
+			xmlns:mx="library://ns.adobe.com/flex/mx"
+			minHeight="12" maxHeight="12">
 	
 	<fx:Script>
 		<![CDATA[
@@ -13,7 +14,7 @@
 				return _showed;
 			}
 			
-			public function set title( title : String ) : void
+			public function set text( title : String ) : void
 			{				
 				lblTitle.htmlText = title;
 			}
