git-svn-id: http://svn.vdombox.ru/flextools/trunk@8639 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/itemrenderer/ObjectTreePanelItemRenderer.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/itemrenderer/ObjectTreePanelItemRenderer.mxml
@@ -220,6 +220,7 @@
 			{
 				var deleteEvent : ObjectsTreePanelEvent = new ObjectsTreePanelEvent( ObjectsTreePanelEvent.DELETE );
 				deleteEvent.objectID = _data.@id;
+				deleteEvent.name = _data.@name;
 				var xmlListCollection : XMLListCollection = (owner as Tree).dataProvider as XMLListCollection;
 				var xml : XML;
 				for each ( xml in xmlListCollection )
