display:_$var -> $var
git-svn-id: http://svn.vdombox.ru/flextools/trunk@8652 230e8929-42e3-3b44-a413-55659dd3a577

--- a/PowerPack/v.01/PowerPack/src/Builder.mxml
+++ b/PowerPack/v.01/PowerPack/src/Builder.mxml
@@ -1028,8 +1028,7 @@
 						else
 							value = fullValue = "null"
 					
-						subArr.push( {	 Name : "_$" + obj,
-							Value : value, FullValue : fullValue } );
+						subArr.push( {	 Name : "$" + obj, 	Value : value, FullValue : fullValue } );
 					}	
 				}
 
