git-svn-id: http://svn.vdombox.ru/flextools/trunk@8656 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/DB/src/net/vdombox/ide/modules/dataBase/view/components/DataTableEditor.mxml
+++ b/IDE/v.02/modules/DB/src/net/vdombox/ide/modules/dataBase/view/components/DataTableEditor.mxml
@@ -542,7 +542,7 @@
 						
 						if ( dataGridProviderOld[item["GUID"]] )
 						{
-							if ( dataGridProviderOld[item["GUID"]][tt] && item[tt] != dataGridProviderOld[item["GUID"]][tt] )
+							if ( item[tt] != dataGridProviderOld[item["GUID"]][tt] )
 							{
 								if ( tt == "id" )
 									requestXMLParam.row.@id = dataGridProviderOld[item["GUID"]][tt];
