--- a/IDE/v.02/common/src/net/vdombox/ide/common/view/skins/windows/AlertSkin.mxml
+++ b/IDE/v.02/common/src/net/vdombox/ide/common/view/skins/windows/AlertSkin.mxml
@@ -2,7 +2,7 @@
 <s:SparkSkin xmlns:fx="http://ns.adobe.com/mxml/2009" 
 		xmlns:s="library://ns.adobe.com/flex/spark" 
 		xmlns:mx="library://ns.adobe.com/flex/mx"
-		maxWidth="400" xmlns:components="net.vdombox.components.*"
+		maxWidth="400" height="100%" xmlns:components="net.vdombox.components.*"
 		creationComplete="sparkskin2_creationCompleteHandler(event)"
 		removedFromStage="sparkskin2_removedFromStageHandler(event)" xmlns:button="net.vdombox.ide.common.view.components.button.*">
 	<!-- host component -->
@@ -32,8 +32,7 @@
 						hostComponent.btnClickHandler(Alert.YES);
 				}
 				else if ( event.keyCode == Keyboard.ESCAPE )
-					hostComponent.btnClickHandler(Alert.NO);
-				
+					hostComponent.btnClickHandler(Alert.NO);				
 			}
 			
 			protected function sparkskin2_creationCompleteHandler(event:FlexEvent):void
@@ -84,12 +83,14 @@
 		
 			<s:VGroup width="100%" height="100%"
 					  paddingTop="20" horizontalAlign="center">
-				<s:Label id="lbltext" maxWidth="382" textAlign="center"
-						 fontSize="16" color="#FFFFFF" text="{hostComponent.text}"/>
+				<s:Label id="lbltext" maxWidth="382" 
+						 textAlign="center" fontSize="16" color="#FFFFFF"
+						 maxDisplayedLines="2"
+						 text="{hostComponent.text}"/>
 				
 				<mx:Spacer height="100%"/>
 				
-				<s:Group width="100%" height="36">
+				<s:Group width="100%" height="46">
 					
 					<s:Rect width="100%" height="100%">
 						<s:fill>
@@ -97,7 +98,7 @@
 						</s:fill>
 					</s:Rect>
 					
-					<s:HGroup height="36" width="100%" horizontalAlign="center" verticalAlign="middle" gap="40">
+					<s:HGroup height="100%" width="100%" horizontalAlign="center" verticalAlign="middle" gap="40">
 						<button:VDOMButton  id="noButton" tabIndex="-1" select="true"
 									icon="{hostComponent.getNoImage()}" label="{hostComponent.getNoLabel()}"
 									visible="{hostComponent.getVisibleTypeButton() == 'ok' ? false : true}" includeInLayout="{hostComponent.getVisibleTypeButton() == 'ok' ? false : true}"
