--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/itemrenderer/TypeItemRenderer.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/itemrenderer/TypeItemRenderer.mxml
@@ -72,6 +72,8 @@
 					addItem.addEventListener( Event.SELECT, addContextMenuHandler, false, 0, true );
 					contextMenu.addItem( addItem );
 				}
+				
+				dispatchEvent( new TypeItemRendererEvent( TypeItemRendererEvent.DATA_CHANGE ));
 			}
 
 			override public function set selected( value : Boolean ) : void
