--- a/IDE/v.02/core/src/VdomIDE.mxml
+++ b/IDE/v.02/core/src/VdomIDE.mxml
@@ -53,6 +53,7 @@
 	
 	<fx:Script>
 		<![CDATA[
+			import mx.events.AIREvent;
 			import mx.events.FlexEvent;
 			
 			import net.vdombox.ide.core.ApplicationFacade;
@@ -75,5 +76,7 @@
 			
 		]]>
 	</fx:Script>
+	
+	<s:Label text="111"/>
 </s:WindowedApplication>
 
