--- a/IDE/v.02/core/src/net/vdombox/ide/core/view/components/LoginView.mxml
+++ b/IDE/v.02/core/src/net/vdombox/ide/core/view/components/LoginView.mxml
@@ -3,6 +3,7 @@
 		 xmlns:s="library://ns.adobe.com/flex/spark" 
 		 xmlns:components="net.vdombox.ide.core.view.components.*"
 		 creationComplete="group1_creationCompleteHandler(event)"
+		 addedToStage="group1_addedToStageHandler(event)"
 		 show="group1_showHandler(event)" xmlns:mx="library://ns.adobe.com/flex/mx" xmlns:skins="net.vdombox.ide.core.view.skins.*"
 		 >
 
@@ -13,6 +14,7 @@
 			
 			import net.vdombox.ide.common.view.components.VDOMImage;
 			import net.vdombox.ide.core.events.LoginViewEvent;
+			import net.vdombox.ide.core.model.LogProxy;
 			import net.vdombox.ide.core.model.vo.LocaleVO;
 
 			[Bindable]
@@ -21,14 +23,24 @@
 			[Bindable]
 			private var _selectedLanguage : *;
 
-			[Bindable]
-			public var username : String;
+			private var _username : String;
 
 			[Bindable]
 			public var password : String;
 
 			[Bindable]
 			public var hostname : String;
+
+			[Bindable]
+			public function get username():String
+			{
+				return _username;
+			}
+
+			public function set username(value:String):void
+			{
+				_username = value;
+			}
 
 			public function get selectedLanguage() : LocaleVO
 			{
@@ -79,6 +91,7 @@
 
 			protected function group1_creationCompleteHandler(event:FlexEvent):void
 			{
+				LogProxy.addLog("group1_creationCompleteHandler");
 				host.setFocus();
 				
 			}
@@ -91,6 +104,7 @@
 			
 			protected function saveButton_clickHandler(event:MouseEvent):void
 			{
+				LogProxy.addLog("saveButton_clickHandler");
 				if ( saveButton.currentState == "save" )
 					saveButton.currentState = "notsave";
 				else
@@ -101,6 +115,12 @@
 			{
 				// TODO Auto-generated method stub
 				selectLang.selectedItem = selectedLanguage;
+			}
+			
+			protected function group1_addedToStageHandler(event:Event):void
+			{
+				// TODO Auto-generated method stub
+				LogProxy.addLog("group1_addedToStageHandler");
 			}
 			
 		]]>
@@ -124,7 +144,7 @@
 				<s:Label text="{ resourceManager.getString( 'LoginForm', 'username' ) }" width="100%"
 						 color="white" fontFamily="Arial" fontSize="14" textAlign="left"/>
 				
-				<s:TextInput id="user" text="@{ username }" skinClass="net.vdombox.ide.common.view.skins.TextInputCornerSkin"
+				<s:TextInput id="user" text="{ username }" skinClass="net.vdombox.ide.common.view.skins.TextInputCornerSkin"
 							 width="100%" height="31"
 							 fontSize="18" fontFamily="Arial" 
 							 keyDown="{keyDownHandler(event)}"/>
@@ -137,7 +157,7 @@
 						 color="white" fontFamily="Arial" fontSize="14" textAlign="left"/>
 				 
 				<s:HGroup width="100%" gap="4">
-					<s:TextInput id="pass" text="@{ password }" skinClass="net.vdombox.ide.common.view.skins.TextInputCornerSkin"
+					<s:TextInput id="pass" text="{ password }" skinClass="net.vdombox.ide.common.view.skins.TextInputCornerSkin"
 								 width="100%" height="31" displayAsPassword="true" 
 								 fontSize="18" fontFamily="Arial" 
 								 keyDown="{keyDownHandler(event)}"/>
