--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/toolbars/richTextToolbarClasses/CodeEditor.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/toolbars/richTextToolbarClasses/CodeEditor.mxml
@@ -8,7 +8,7 @@
 				showCloseButton="true" 
 				
 				titleStyleName="titleStyle"
-				creationComplete="setFocus(); addHandlers();">
+				creationComplete="setFocus(); addHandlers();" xmlns:s="library://ns.adobe.com/flex/spark">
 
 	<mx:Style>
 		.titleStyle {
@@ -80,20 +80,37 @@
 			}
 		]]>
 	</mx:Script>
-
-	<mx:TextArea id="_code"
-				 focusEnabled="false" height="100%" text="{_codeText}" width="100%" />
-
-	<mx:ControlBar paddingBottom="5" paddingLeft="8" paddingRight="8">
-
-		<mx:Button label="Update"
-				   cornerRadius="0"
-				   click="closeWithSave();" />
-
-		<mx:Spacer width="100%" />
-
-		<mx:Button label="Cancel"
-				   cornerRadius="0"
-				   click="closeWithoutSave();" />
-	</mx:ControlBar>
+	
+	<s:Group width="400" height="300">
+		
+		<s:Rect width="100%" height="100%">
+			<s:fill>
+				<s:SolidColor color="0xdedede"/>
+			</s:fill>
+		</s:Rect>
+		
+		<s:VGroup width="100%" height="100%" top="30" paddingLeft="5" paddingRight="5">
+			<s:TextArea id="_code" contentBackgroundColor="0xFFFFFF"
+						 focusEnabled="false" height="100%" text="{_codeText}" width="100%" />
+			
+			<s:HGroup width="100%"
+				paddingBottom="5" paddingLeft="8" paddingRight="8">
+				
+				<s:Button label="Update"
+						   cornerRadius="0"
+						   click="closeWithSave();" />
+				
+				<mx:Spacer width="100%" />
+				
+				<s:Button label="Cancel"
+						   cornerRadius="0"
+						   click="closeWithoutSave();" />
+			</s:HGroup>
+		</s:VGroup>
+		
+		
+		
+	</s:Group>
+	
+	
 </mx:TitleWindow>
